add rips complex

--- a/test.ipynb
+++ b/test.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import Topoll.Samplers.Samplers\n",
     "import Topoll.DistanceMatrix.DistanceMatrix\n",
-    "import Topoll.Witness.Witness\n",
+    "import Topoll.Complexes.Witness\n",
     "import Topoll.SimplicialSet"
    ]
   },
