refactor, separated tests

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,65 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import Topoll.Samplers.Samplers\n",
     "import Topoll.DistanceMatrix.DistanceMatrix\n",
     "import Topoll.Complexes.Witness\n",
+    "import Topoll.Complexes.Rips\n",
     "import Topoll.SimplicialSet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pts <- sampleSpherePointsUniformlyAtParametrization 10 1000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dat <- chooseMaxminLandmakrs 200 pts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m = computeDistanceMatrix dat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[602,1]"
-      ]
+      "text/plain": []
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
    "source": [
-    "simplicialHomologyOverQ $ case witnessSet m 0 2 of Right s -> s"
+    "pts <- sampleSphereUniformly 10 50"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = computeTotalDistanceMatrix pts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -147,46 +128,16 @@
        ".suggestion-name {\n",
        "font-weight: bold;\n",
        "}\n",
-       "</style><span class='get-type'>m :: Vector (Vector Float)</span>"
+       "</style><div class=\"suggestion-name\" style=\"clear:both;\">Fuse mapM/map</div><div class=\"suggestion-row\" style=\"float: left;\"><div class=\"suggestion-warning\">Found:</div><div class=\"highlight-code\" id=\"haskell\">Prelude.mapM print\n",
+       "  $ map (simplicialHomologyOverQ . ripsSet m) [1 .. 30]</div></div><div class=\"suggestion-row\" style=\"float: left;\"><div class=\"suggestion-warning\">Why Not:</div><div class=\"highlight-code\" id=\"haskell\">mapM (print . simplicialHomologyOverQ . ripsSet m) [1 .. 30]</div></div>"
       ],
       "text/plain": [
-       "m :: Vector (Vector Float)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    ":t m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
+       "Line 1: Fuse mapM/map\n",
+       "Found:\n",
+       "Prelude.mapM print\n",
+       "  $ map (simplicialHomologyOverQ . ripsSet m) [1 .. 30]\n",
+       "Why not:\n",
+       "mapM (print . simplicialHomologyOverQ . ripsSet m) [1 .. 30]"
       ]
      },
      "metadata": {},
@@ -195,7 +146,53 @@
     {
      "data": {
       "text/plain": [
-       "800"
+       "[38,0]\n",
+       "[16,1,0,0]\n",
+       "[1,4,0,0,0,0]\n",
+       "[1,1,0,0,0,0,0,0,0]\n",
+       "[1,3,0,0,0,0,0,0,0,0,0]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Prelude.mapM print $ map (simplicialHomologyOverQ . ripsSet m) [1..30]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "50"
       ]
      },
      "metadata": {},
