--- a/test.ipynb
+++ b/test.ipynb
@@ -6,11 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    ":set -XOverloadedLabels\n",
     "import Topoll.Samplers.Samplers\n",
     "import Topoll.DistanceMatrix.DistanceMatrix\n",
     "import Topoll.Complexes.Witness\n",
     "import Topoll.Complexes.Rips\n",
-    "import Topoll.SimplicialSet"
+    "import Topoll.SimplicialSet\n",
+    "import Named"
    ]
   },
   {
@@ -27,7 +29,7 @@
     }
    ],
    "source": [
-    "pts <- sampleSphereUniformly 10 50"
+    "pts <- sampleSphereUniformly ! #r 10 ! #n 500"
    ]
   },
   {
@@ -36,121 +38,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = computeTotalDistanceMatrix pts"
+    "dat <- chooseMaxminLandmarks 12 pts \n",
+    "complex r = witnessSet (computeDistanceMatrix dat) ! #nu 2 ! #r r"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<style>/* Styles used for the Hoogle display in the pager */\n",
-       ".hoogle-doc {\n",
-       "display: block;\n",
-       "padding-bottom: 1.3em;\n",
-       "padding-left: 0.4em;\n",
-       "}\n",
-       ".hoogle-code {\n",
-       "display: block;\n",
-       "font-family: monospace;\n",
-       "white-space: pre;\n",
-       "}\n",
-       ".hoogle-text {\n",
-       "display: block;\n",
-       "}\n",
-       ".hoogle-name {\n",
-       "color: green;\n",
-       "font-weight: bold;\n",
-       "}\n",
-       ".hoogle-head {\n",
-       "font-weight: bold;\n",
-       "}\n",
-       ".hoogle-sub {\n",
-       "display: block;\n",
-       "margin-left: 0.4em;\n",
-       "}\n",
-       ".hoogle-package {\n",
-       "font-weight: bold;\n",
-       "font-style: italic;\n",
-       "}\n",
-       ".hoogle-module {\n",
-       "font-weight: bold;\n",
-       "}\n",
-       ".hoogle-class {\n",
-       "font-weight: bold;\n",
-       "}\n",
-       ".get-type {\n",
-       "color: green;\n",
-       "font-weight: bold;\n",
-       "font-family: monospace;\n",
-       "display: block;\n",
-       "white-space: pre-wrap;\n",
-       "}\n",
-       ".show-type {\n",
-       "color: green;\n",
-       "font-weight: bold;\n",
-       "font-family: monospace;\n",
-       "margin-left: 1em;\n",
-       "}\n",
-       ".mono {\n",
-       "font-family: monospace;\n",
-       "display: block;\n",
-       "}\n",
-       ".err-msg {\n",
-       "color: red;\n",
-       "font-style: italic;\n",
-       "font-family: monospace;\n",
-       "white-space: pre;\n",
-       "display: block;\n",
-       "}\n",
-       "#unshowable {\n",
-       "color: red;\n",
-       "font-weight: bold;\n",
-       "}\n",
-       ".err-msg.in.collapse {\n",
-       "padding-top: 0.7em;\n",
-       "}\n",
-       ".highlight-code {\n",
-       "white-space: pre;\n",
-       "font-family: monospace;\n",
-       "}\n",
-       ".suggestion-warning { \n",
-       "font-weight: bold;\n",
-       "color: rgb(200, 130, 0);\n",
-       "}\n",
-       ".suggestion-error { \n",
-       "font-weight: bold;\n",
-       "color: red;\n",
-       "}\n",
-       ".suggestion-name {\n",
-       "font-weight: bold;\n",
-       "}\n",
-       "</style><div class=\"suggestion-name\" style=\"clear:both;\">Fuse mapM/map</div><div class=\"suggestion-row\" style=\"float: left;\"><div class=\"suggestion-warning\">Found:</div><div class=\"highlight-code\" id=\"haskell\">Prelude.mapM print\n",
-       "  $ map (simplicialHomologyOverQ . ripsSet m) [1 .. 30]</div></div><div class=\"suggestion-row\" style=\"float: left;\"><div class=\"suggestion-warning\">Why Not:</div><div class=\"highlight-code\" id=\"haskell\">mapM (print . simplicialHomologyOverQ . ripsSet m) [1 .. 30]</div></div>"
-      ],
       "text/plain": [
-       "Line 1: Fuse mapM/map\n",
-       "Found:\n",
-       "Prelude.mapM print\n",
-       "  $ map (simplicialHomologyOverQ . ripsSet m) [1 .. 30]\n",
-       "Why not:\n",
-       "mapM (print . simplicialHomologyOverQ . ripsSet m) [1 .. 30]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[38,0]\n",
-       "[16,1,0,0]\n",
-       "[1,4,0,0,0,0]\n",
-       "[1,1,0,0,0,0,0,0,0]\n",
-       "[1,3,0,0,0,0,0,0,0,0,0]"
+       "Right [1,0,1]"
       ]
      },
      "metadata": {},
@@ -158,51 +58,7 @@
     }
    ],
    "source": [
-    "Prelude.mapM print $ map (simplicialHomologyOverQ . ripsSet m) [1..30]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "50"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "50"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import Data.Vector as V\n",
-    "V.length m\n",
-    "V.length (V.head m)\n"
+    "simplicialHomologyOverQ <$> complex 0"
    ]
   },
   {
