Overloaded  label  should start with small letter:(

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,24 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pts <- sampleSphereUniformly ! #r 10 ! #n 500"
+    "pts <- sampleSphereUniformly ! #r 10 ! #n 100\n",
+    "-- pts <- sampleTorusUniformly ! #r 2 ! #bigR 10 ! #n 500"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,16 +43,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1,4,0]\n",
+       "[1,1,0,0]\n",
+       "[1,0,0,0]\n",
+       "[1,0,1,0]\n",
+       "[1,0,1,0]\n",
+       "[1,0,2,0]\n",
+       "[1,0,1,0,0]\n",
+       "[1,0,1,0,0]\n",
+       "[1,0,1,0,0]\n",
+       "[1,0,2,0,0]\n",
+       "[1,0,0,0,0]\n",
+       "[1,0,1,0,0]\n",
+       "[1,0,1,0,0]\n",
+       "[1,0,0,0,0,0]\n",
+       "[1,0,0,0,0]\n",
+       "[1,0,0,0,0,0]\n",
+       "[1,0,0,0,0]\n",
+       "[1,0,0,0,0]\n",
+       "[1,0,0,0,0]\n",
+       "[1,0,0,0,0]\n",
+       "[1,0,0,0,0]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "mapM_  (print . simplicialHomologyOverQ . wComplex) [0,0.5 .. 10] "
+    "mapM_  (print . simplicialHomologyOverQ . wComplex 2) [0,0.5 .. 10] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +98,7 @@
           "r": 0
          },
          {
-          "b": 1,
+          "b": 4,
           "c": "0",
           "h": "H_1",
           "r": 0
@@ -93,123 +116,117 @@
           "r": 0.5
          },
          {
-          "b": 0,
+          "b": 1,
           "c": "0",
           "h": "H_1",
           "r": 0.5
+         },
+         {
+          "b": 0,
+          "c": "0",
+          "h": "H_2",
+          "r": 0.5
+         },
+         {
+          "b": 0,
+          "c": "0",
+          "h": "H_3",
+          "r": 0.5
+         },
+         {
+          "b": 1,
+          "c": "0",
+          "h": "H_0",
+          "r": 1
+         },
+         {
+          "b": 0,
+          "c": "0",
+          "h": "H_1",
+          "r": 1
+         },
+         {
+          "b": 0,
+          "c": "0",
+          "h": "H_2",
+          "r": 1
+         },
+         {
+          "b": 0,
+          "c": "0",
+          "h": "H_3",
+          "r": 1
+         },
+         {
+          "b": 1,
+          "c": "1",
+          "h": "H_0",
+          "r": 1.5
+         },
+         {
+          "b": 0,
+          "c": "1",
+          "h": "H_1",
+          "r": 1.5
+         },
+         {
+          "b": 1,
+          "c": "1",
+          "h": "H_2",
+          "r": 1.5
+         },
+         {
+          "b": 0,
+          "c": "1",
+          "h": "H_3",
+          "r": 1.5
+         },
+         {
+          "b": 1,
+          "c": "1",
+          "h": "H_0",
+          "r": 2
+         },
+         {
+          "b": 0,
+          "c": "1",
+          "h": "H_1",
+          "r": 2
+         },
+         {
+          "b": 1,
+          "c": "1",
+          "h": "H_2",
+          "r": 2
+         },
+         {
+          "b": 0,
+          "c": "1",
+          "h": "H_3",
+          "r": 2
+         },
+         {
+          "b": 1,
+          "c": "0",
+          "h": "H_0",
+          "r": 2.5
+         },
+         {
+          "b": 0,
+          "c": "0",
+          "h": "H_1",
+          "r": 2.5
          },
          {
           "b": 2,
           "c": "0",
           "h": "H_2",
-          "r": 0.5
+          "r": 2.5
          },
          {
           "b": 0,
           "c": "0",
           "h": "H_3",
-          "r": 0.5
-         },
-         {
-          "b": 1,
-          "c": "1",
-          "h": "H_0",
-          "r": 1
-         },
-         {
-          "b": 0,
-          "c": "1",
-          "h": "H_1",
-          "r": 1
-         },
-         {
-          "b": 1,
-          "c": "1",
-          "h": "H_2",
-          "r": 1
-         },
-         {
-          "b": 0,
-          "c": "1",
-          "h": "H_3",
-          "r": 1
-         },
-         {
-          "b": 1,
-          "c": "1",
-          "h": "H_0",
-          "r": 1.5
-         },
-         {
-          "b": 0,
-          "c": "1",
-          "h": "H_1",
-          "r": 1.5
-         },
-         {
-          "b": 1,
-          "c": "1",
-          "h": "H_2",
-          "r": 1.5
-         },
-         {
-          "b": 0,
-          "c": "1",
-          "h": "H_3",
-          "r": 1.5
-         },
-         {
-          "b": 1,
-          "c": "1",
-          "h": "H_0",
-          "r": 2
-         },
-         {
-          "b": 0,
-          "c": "1",
-          "h": "H_1",
-          "r": 2
-         },
-         {
-          "b": 1,
-          "c": "1",
-          "h": "H_2",
-          "r": 2
-         },
-         {
-          "b": 0,
-          "c": "1",
-          "h": "H_3",
-          "r": 2
-         },
-         {
-          "b": 1,
-          "c": "1",
-          "h": "H_0",
-          "r": 2.5
-         },
-         {
-          "b": 0,
-          "c": "1",
-          "h": "H_1",
-          "r": 2.5
-         },
-         {
-          "b": 1,
-          "c": "1",
-          "h": "H_2",
-          "r": 2.5
-         },
-         {
-          "b": 0,
-          "c": "1",
-          "h": "H_3",
-          "r": 2.5
-         },
-         {
-          "b": 0,
-          "c": "1",
-          "h": "H_4",
           "r": 2.5
          },
          {
@@ -274,31 +291,31 @@
          },
          {
           "b": 1,
-          "c": "0",
+          "c": "1",
           "h": "H_0",
           "r": 4
          },
          {
           "b": 0,
-          "c": "0",
+          "c": "1",
           "h": "H_1",
           "r": 4
          },
          {
-          "b": 0,
-          "c": "0",
+          "b": 1,
+          "c": "1",
           "h": "H_2",
           "r": 4
          },
          {
           "b": 0,
-          "c": "0",
+          "c": "1",
           "h": "H_3",
           "r": 4
          },
          {
           "b": 0,
-          "c": "0",
+          "c": "1",
           "h": "H_4",
           "r": 4
          },
@@ -315,7 +332,7 @@
           "r": 4.5
          },
          {
-          "b": 0,
+          "b": 2,
           "c": "0",
           "h": "H_2",
           "r": 4.5
@@ -334,104 +351,92 @@
          },
          {
           "b": 1,
-          "c": "1",
-          "h": "H_0",
-          "r": 5
-         },
-         {
-          "b": 0,
-          "c": "1",
-          "h": "H_1",
-          "r": 5
-         },
-         {
-          "b": 1,
-          "c": "1",
-          "h": "H_2",
-          "r": 5
-         },
-         {
-          "b": 0,
-          "c": "1",
-          "h": "H_3",
-          "r": 5
-         },
-         {
-          "b": 0,
-          "c": "1",
-          "h": "H_4",
-          "r": 5
-         },
-         {
-          "b": 1,
           "c": "0",
           "h": "H_0",
-          "r": 5.5
+          "r": 5
          },
          {
           "b": 0,
           "c": "0",
           "h": "H_1",
-          "r": 5.5
+          "r": 5
          },
          {
           "b": 0,
           "c": "0",
           "h": "H_2",
-          "r": 5.5
+          "r": 5
          },
          {
           "b": 0,
           "c": "0",
           "h": "H_3",
-          "r": 5.5
+          "r": 5
          },
          {
           "b": 0,
           "c": "0",
           "h": "H_4",
+          "r": 5
+         },
+         {
+          "b": 1,
+          "c": "1",
+          "h": "H_0",
           "r": 5.5
          },
          {
           "b": 0,
-          "c": "0",
-          "h": "H_5",
+          "c": "1",
+          "h": "H_1",
           "r": 5.5
          },
          {
           "b": 1,
-          "c": "0",
+          "c": "1",
+          "h": "H_2",
+          "r": 5.5
+         },
+         {
+          "b": 0,
+          "c": "1",
+          "h": "H_3",
+          "r": 5.5
+         },
+         {
+          "b": 0,
+          "c": "1",
+          "h": "H_4",
+          "r": 5.5
+         },
+         {
+          "b": 1,
+          "c": "1",
           "h": "H_0",
           "r": 6
          },
          {
           "b": 0,
-          "c": "0",
+          "c": "1",
           "h": "H_1",
           "r": 6
          },
          {
-          "b": 0,
-          "c": "0",
+          "b": 1,
+          "c": "1",
           "h": "H_2",
           "r": 6
          },
          {
           "b": 0,
-          "c": "0",
+          "c": "1",
           "h": "H_3",
           "r": 6
          },
          {
           "b": 0,
-          "c": "0",
+          "c": "1",
           "h": "H_4",
-          "r": 6
-         },
-         {
-          "b": 0,
-          "c": "0",
-          "h": "H_5",
           "r": 6
          },
          {
@@ -498,12 +503,6 @@
           "b": 0,
           "c": "0",
           "h": "H_4",
-          "r": 7
-         },
-         {
-          "b": 0,
-          "c": "0",
-          "h": "H_5",
           "r": 7
          },
          {
@@ -570,12 +569,6 @@
           "b": 0,
           "c": "0",
           "h": "H_4",
-          "r": 8
-         },
-         {
-          "b": 0,
-          "c": "0",
-          "h": "H_5",
           "r": 8
          },
          {
@@ -695,7 +688,7 @@
         },
         "y": {
          "axis": {
-          "tickCount": 2,
+          "tickCount": 4,
           "titleAngle": 0,
           "titlePadding": 10
          },
@@ -735,13 +728,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import Data.List (intercalate)\n",
     "import Text.Printf\n",
@@ -761,49 +747,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "{-# LANGUAGE OverloadedStrings #-}\n",
-    "\n",
-    "import Data.List (dropWhileEnd)\n",
-    "import Graphics.Vega.VegaLite\n",
-    "import Topoll.ChainComplex.Field\n",
-    "import qualified Data.Text as T\n",
-    "\n",
-    "drawPersistentHomologies :: (Float -> [BettiNumber]) -> ([BettiNumber] -> Bool) -> Float -> Int -> VegaLite\n",
-    "drawPersistentHomologies calcHomologies coloringCond step n =\n",
-    "  let homologiesData = map (\\r -> (calcHomologies r, r)) $ take n $ enumFromThen 0 step\n",
-    "      h =\n",
-    "        concat $\n",
-    "          [ zipWith\n",
-    "                  ( \\bn hn ->\n",
-    "                      dataRow\n",
-    "                        [(\"r\", Number $ realToFrac r),\n",
-    "                         (\"b\", Number $ realToFrac bn),\n",
-    "                         (\"h\", Str  $ \"H_\" <> T.pack (show hn)),\n",
-    "                         (\"c\", Str $ if coloringCond bns then \"1\" else  \"0\")\n",
-    "                         ]\n",
-    "                  )\n",
-    "                  bns\n",
-    "                  [0 :: Integer ..]\n",
-    "            | (bns, r) <- homologiesData\n",
-    "          ]\n",
-    "\n",
-    "      d = dataFromRows [] . foldr (.) id h\n",
-    "      enc =\n",
-    "        encoding\n",
-    "          . position X [PName \"r\", PmType Quantitative, PAxis [AxTickCount n]]\n",
-    "          . position Y [PName \"b\", PmType Quantitative, PAxis [AxTitleAngle 0, AxTitlePadding 10, AxTickCount (fromIntegral $ maximum $ concatMap fst homologiesData)]]\n",
-    "          . column [FName \"h\", FmType Nominal, FNoTitle]\n",
-    "          . color [MName \"c\", MLegend [], MScale [SRange (RStrings [\"blue\",\"red\"])]]\n",
-    "   in toVegaLite\n",
-    "        [ d [],\n",
-    "          mark Point [],\n",
-    "          enc []\n",
-    "        ]\n",
-    "\n",
-    "eqSphere :: [BettiNumber] -> Bool\n",
-    "eqSphere xs = dropWhileEnd (== 0) xs == [1, 0, 1]\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
